--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,19 @@
-<app-nova-transferencia
+<!-- <app-nova-transferencia></app-nova-transferencia>
+<app-extrato></app-extrato> -->
+<!-- <app-nova-transferencia
   (aoTransferir)="transferir($event)">
-</app-nova-transferencia>
+</app-nova-transferencia> -->
 
-<app-extrato [transferencias]="transferencias"></app-extrato>
+
+<!-- <app-extrato [transferencias]="transferencias"></app-extrato> -->
 
 <!-- <p>Valor: {{transferencia?.valor}}</p>
-<p>Destino: {{transferencia?.destino}}</p> -->
+  <p>Destino: {{transferencia?.destino}}</p> -->
+
+<header>
+  <a routerLink="extrato">ByteBank</a>
+  <a routerLink="nova-transferencia" routerLinkActive="ativo">Nova Transferencia</a>
+</header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
