--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,23 @@
 // App.component.scss
+
+header{
+  background-color: var(--primary);
+  padding: 10px;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+
+  a{
+    color: inherit;
+    text-decoration: none;
+  }
+
+  .ativo{
+    display: none;
+  }
+}
+
+main{
+  background-color: #FCFCFC;
+  padding: var(--padding);
+}
